Added repo json

--- a/PlayerSpy/PlayerSpy.csproj
+++ b/PlayerSpy/PlayerSpy.csproj
@@ -4,7 +4,7 @@
     <Authors></Authors>
     <Company></Company>
     <Version>0.0.0.1</Version>
-    <Description>A sample plugin.</Description>
+    <Description>A plugin for dynamically modifying a penumbra mod based on if someone is near.</Description>
     <Copyright></Copyright>
     <PackageProjectUrl>https://github.com/goatcorp/SamplePlugin</PackageProjectUrl>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
