--- a/PlayerSpy/PlayerSpy.csproj
+++ b/PlayerSpy/PlayerSpy.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Authors></Authors>
     <Company></Company>
-    <Version>0.0.0.2</Version>
+    <Version>0.0.0.3</Version>
     <Description>A plugin for dynamically modifying a penumbra mod based on if someone is near.</Description>
     <Copyright></Copyright>
     <PackageProjectUrl>https://github.com/goatcorp/SamplePlugin</PackageProjectUrl>
@@ -31,9 +31,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DalamudPackager" Version="2.1.10" />
-    <ProjectReference Include="..\..\OtterGui\OtterGui.csproj" />
-    <ProjectReference Include="..\..\Penumbra\Penumbra.Api\Penumbra.Api.csproj" />
+    <PackageReference Include="DalamudPackager" Version="2.1.12" />
+      <PackageReference Include="Penumbra.Api" Version="1.0.11" />
     <Reference Include="FFXIVClientStructs">
       <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
       <Private>false</Private>
