--- a/PlayerSpy/PlayerSpy.csproj
+++ b/PlayerSpy/PlayerSpy.csproj
@@ -33,34 +33,34 @@
   <ItemGroup>
     <PackageReference Include="DalamudPackager" Version="2.1.12" />
       <PackageReference Include="Penumbra.Api" Version="1.0.11" />
-    <Reference Include="FFXIVClientStructs">
-      <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
-      <Private>false</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>$(DalamudLibPath)Newtonsoft.Json.dll</HintPath>
-      <Private>false</Private>
-    </Reference>
-    <Reference Include="Dalamud">
-      <HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
-      <Private>false</Private>
-    </Reference>
-    <Reference Include="ImGui.NET">
-      <HintPath>$(DalamudLibPath)ImGui.NET.dll</HintPath>
-      <Private>false</Private>
-    </Reference>
-    <Reference Include="ImGuiScene">
-      <HintPath>$(DalamudLibPath)ImGuiScene.dll</HintPath>
-      <Private>false</Private>
-    </Reference>
-    <Reference Include="Lumina">
-      <HintPath>$(DalamudLibPath)Lumina.dll</HintPath>
-      <Private>false</Private>
-    </Reference>
-    <Reference Include="Lumina.Excel">
-      <HintPath>$(DalamudLibPath)Lumina.Excel.dll</HintPath>
-      <Private>false</Private>
-    </Reference>
+      <Reference Include="Dalamud">
+          <HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="ImGui.NET">
+          <HintPath>$(DalamudLibPath)ImGui.NET.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="ImGuiScene">
+          <HintPath>$(DalamudLibPath)ImGuiScene.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="Lumina">
+          <HintPath>$(DalamudLibPath)Lumina.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="Lumina.Excel">
+          <HintPath>$(DalamudLibPath)Lumina.Excel.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="FFXIVClientStructs">
+          <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
+      <Reference Include="Newtonsoft.Json">
+          <HintPath>$(DalamudLibPath)Newtonsoft.Json.dll</HintPath>
+          <Private>False</Private>
+      </Reference>
   </ItemGroup>
 
 </Project>
