Update to .net8 (sorta), add all players requirement

--- a/PlayerSpy/PlayerSpy.csproj
+++ b/PlayerSpy/PlayerSpy.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Authors></Authors>
     <Company></Company>
-    <Version>0.0.0.8</Version>
+    <Version>1.0.0</Version>
     <Description>A plugin for dynamically modifying a penumbra mod based on if someone is near.</Description>
     <Copyright></Copyright>
     <PackageProjectUrl>https://github.com/goatcorp/SamplePlugin</PackageProjectUrl>
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <Platforms>x64</Platforms>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
